= Changes

== 2013-11-04 (0.0.15)
* Added subcommand: <tt>cs publicip list</tt> (Sander Botman, 03 Nov 2013)
* Bugfix: removed the chef rest dependency because this is changed in chef 11.8.0 (Sander Botman, 03 Nov 2013)
* Bugfix: added the option --cloudstack-no-ssl-verify in order to ignore ssl verification (Sander Botman, 03 Nov 2013)
* Added subcommand: <tt>cs forwardrule create</tt> (Sander Botman, 28 Aug 2013)
* Added subcommand: <tt>cs firewallrule create</tt> (Sander Botman, 28 Aug 2013)
* Added the option: <tt>--set-display-name</tt> to <tt>server create</tt> (Florin Stan, 5 Aug 2013)
* Added the option: <tt>--keypair</tt> to <tt>server create</tt> (Florin Stan, 31 Jul 2013)
* Added subcommand: <tt>cs volume create</tt> (Jeremy Baumont, 17 Jul 2013)
* Added the option: <tt>--disk</tt> to <tt>server create</tt> (Stanislav Voroniy (voroniys) 13 Jun 2013)
* Added subcommands: <tt>cs keypair list</tt>, <tt>cs keypair create</tt>, <tt>cs keypair delete</tt> and adding basic zone check. (Sebastian Goasguen (runseb) 29 May 2013)
* Bugfix: changed output name to password (Warren Bain, 26 May 2013)
* Bugfix: various bugfixes and fixing bootstrap context (bacoboy, 22 Apr 2013)

== 2013-04-14 (0.0.14)
* Added bash/addinstance.sh script in onder to ease instance creation from cli.

* Added the cs_base.rb to merge all common options.
* Added the cs_base_list.rb to merge all common options and functions for the list commands.
* Added the option: <tt>-P</tt> / <tt>--cloudstack-project</tt> to the following commands: <tt>account list</tt>, <tt>firewallrule list</tt>, <tt>hosts</tt>,
  <tt>iso list</tt>, <tt>network list</tt>, <tt>router list</tt>, <tt>server list</tt>, <tt>template list</tt>, <tt>volume list</tt>

* Added subcommands: <tt>account list</tt>, <tt>cluster list</tt>, <tt>config list</tt>, <tt>disk create</tt>,
  <tt>disk list</tt>, <tt>domain list</tt>,<tt>firewallrule list</tt>, <tt>host list</tt>,