@@ -60,6 +60,10 @@ class Chef
                  :description => "Disable certificate verify on SSL",
                  :boolean => true
 
+          option :cloudstack_proxy,
+                 :long => '--cloudstack-proxy PROXY',
+                 :description => "Enable proxy configuration for cloudstack api access"
+
           def validate_base_options
             unless locate_config_value :cloudstack_url
               ui.error "Cloudstack URL not specified"
@@ -81,7 +85,8 @@ class Chef
               locate_config_value(:cloudstack_api_key),
               locate_config_value(:cloudstack_secret_key),
               locate_config_value(:cloudstack_project),
-              locate_config_value(:cloudstack_no_ssl_verify)
+              locate_config_value(:cloudstack_no_ssl_verify),
+              locate_config_value(:cloudstack_proxy)
             )
           end
 
