@@ -1,6 +1,7 @@
 = Changes
 
 == 2013-11-04 (0.0.15)
+* Bugfix: fixed the proxy with the option: --cloudstack-proxy http://username:password@yourproxy:8080 or use config file. (Sander Botman, 04 Nov 2013)
 * Added subcommand: <tt>cs publicip list</tt> (Sander Botman, 03 Nov 2013)
 * Bugfix: removed the chef rest dependency because this is changed in chef 11.8.0 (Sander Botman, 03 Nov 2013)
 * Bugfix: added the option --cloudstack-no-ssl-verify in order to ignore ssl verification (Sander Botman, 03 Nov 2013)
